--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,10 @@
     font-family: "Poppins", sans-serif;
     font-style: normal;
 }
-
+main{
+  margin: 0 auto;
+  width: 80%;
+}
 .navbar-brand{
   font-weight: 900;
 }
@@ -81,4 +84,32 @@ h1{
 
 .btn-primary:focus {
   animation: pulse 0.5s ease-in-out;
+}
+
+footer {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+.social-links a {
+  transition: transform 0.3s ease;
+}
+
+.social-links a:hover {
+  transform: translateY(-5px);
+}
+
+#back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  display: none;
+  z-index: 99;
+}
+.mb-3 {
+  color: white;
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 1.2;
 }
