--- a/project/css/templatemo-festava-live.css
+++ b/project/css/templatemo-festava-live.css
@@ -176,7 +176,7 @@ strong {
   CAROUSEL        
 -----------------------------------------*/
 .hero-section {
-  background-image: url('../images/templatemo-wave-banner.jpg'), linear-gradient(#348CD2, #FFFFFF);
+  background-color: white;
   background-repeat: no-repeat;
   background-size: 108% 76%;
   background-position: top;
