--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@
     font-family: "Poppins", sans-serif;
     font-style: normal;
 }
+a{
+  text-decoration: none;
+  color: white;
+  
+}
 main{
   margin: 0 auto;
   width: 80%;
@@ -27,7 +32,10 @@ h1{
   color: black;
   scale: 1.1;
 }
-  
+#project{
+  background-color: white;
+  border-radius: 50px;
+}
 #contact {
     background-color: #f8f9fa;
 }
@@ -112,4 +120,12 @@ footer {
   font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.2;
+}
+.title-service{
+  color: black;
+  text-decoration: none;
+}
+.title-service:hover{
+  cursor: pointer;
+  color: black;
 }
